--- a/css/style.css
+++ b/css/style.css
@@ -28,11 +28,23 @@ ul {
   height: 100%;
 }
 
+#carouselButtons {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
 .row-common {
   min-height: 400px;
   margin: 0 auto;
   padding: 40px 0;
   border-bottom: 1px solid #eaeaea;
+}
+
+.btn-envelope {
+  color: #fff;
+  background-color: #f00;
+  border-color: rgba(0, 0, 0, 0.2);
 }
 
 .footer-section {
